--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,600,700&display=swap&subset=cyrillic");
+/* @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,600,700&display=swap&subset=cyrillic"); */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap&subset=cyrillic');
 @import "../../../node_modules/sweetalert/dist/sweetalert.css";
 /* @import "../../../node_modules/nouislider/distribute/nouislider.css"; */
 
@@ -15,11 +16,14 @@
 
 @import "xandercode.css";
 
-@import "__header.css";
-@import "__header_media.css";
+/* @import "__header.css";
+@import "__header_media.css"; */
 
-@import "__header2.css";
-@import "__header2_media.css";
+/* @import "__header2.css";
+@import "__header2_media.css"; */
+
+@import "__header3.css";
+@import "__header3_media.css";
 
 @import "__menu.css";
 @import "__menu_media.css";
