--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,8 +1,8 @@
 html,
 body {
   color: #000;
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
   font-weight: 400;
   line-height: 1.2;
   position: relative;
