--- a/src/__breadcrumbs.pug
+++ b/src/__breadcrumbs.pug
@@ -9,3 +9,15 @@ mixin breadcrumbs
       |           /
       div
         span Текущий пункт
+
+mixin breadcrumbs3
+  .breadcrumbs3__area.w0
+    .breadcrumbs3.w1
+      div
+        a(href='#') Главная 
+      |           /
+      div
+        a(href='#') Категория 
+      |           /
+      div
+        span Текущий пункт
