--- a/src/procedure3.pug
+++ b/src/procedure3.pug
@@ -9,7 +9,7 @@ include __mainTop
 include __mainBox
 include __breadcrumbs
 include __wideBlock
-include __procedure2
+include __procedure3
 
 include __forms
 include __footer
@@ -26,119 +26,122 @@ body
 
   .site__header
     +header3
-    +topMenu
+
 
 
   .site__center
-    +breadcrumbs
+    +breadcrumbs3
+    .procedure3__introArea 
+      .procedure3__intro
+        +procedure3__intro
     +wideBlock
     .serv__area.w0
-    .serv__outer.w1
-      .serv__wrapper
-        +leftMenuSuperTree
-        .servBox__outer
-          .procedure__area.w0
-            .procedure__outer.w1
-              .title1
-                h1 Лазерная эпиляция
-              .procedure
-                +procedure2__intro
-                
-                .procedure__masters
-                  .title1
-                    h2 Наши специалисты
-                  .procedure__masterscontent
-                    .procedure__masterOuter
-                      a.procedure__master(href="") Лукьянова Наталья
-                    .procedure__masterOuter
-                      a.procedure__master(href="") Лукьянова Наталья
-                    .procedure__masterOuter
-                      a.procedure__master(href="") Лукьянова Наталья
-                    .procedure__masterOuter
-                      a.procedure__master(href="") Лукьянова Наталья
-                    .procedure__masterOuter
-                      a.procedure__master(href="") Лукьянова Наталья
-                .procedure__longContent
-                  .title1
-                    h2 Описание
-                  .content
-                    +tempContent
-                .procedure__video
-                  +videogallery
-                .procedure__photo
-                  .title1
-                    h3 Фото
-                  +gallery
-                .price__area#priceAnchor
-                  .title1
-                    h2 Цены
-                  .priceBox__area
-                    .priceBox__title 
-                      h3 Лазерная эпиляция лица и шеи
-                    .priceBox
-                      table
-                        tr
-                          td Лоб
-                          td 2500 руб.
-                        tr
-                          td Шея (задняя поверхность)
-                          td 3400 руб.
-                        tr
-                          td Шея (передняя поверхность)
-                          td 3400 руб.
-                        tr
-                          td Лицо
-                          td 5800 руб.
-                        tr
-                          td Крылья носа
-                          td 2000 руб.
-                  .priceBox__area
-                    .priceBox__title 
-                      h3 Лазерная эпиляция лица и шеи
-                    .priceBox
-                      table
-                        tr
-                          td Лоб
-                          td 2500 руб.
-                        tr
-                          td Шея (задняя поверхность)
-                          td 3400 руб.
-                        tr
-                          td Шея (передняя поверхность)
-                          td 3400 руб.
-                        tr
-                          td Лицо
-                          td 5800 руб.
-                        tr
-                          td Крылья носа!
-                          td 2000 руб.
-                  .outerLink__area
-                    span Все для домашнего ухода Вы можете приобрести в нашем Бьюти-бутике.
-                    a.outerLink(href="#", target="_blank", rel="nofollow") Открыть
-                .popular__area
-                  .title1
-                    h2 Популярные процедуры
-                  .popular.mainBox.clearfix
-                    .mainBox__itemOuter
-                      a.mainBox__item(href="#")
-                        .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                          img.kv-img(src="assets/img/w285h285.png", alt="")
-                        span Описание первого блока в несколько строчек
-                    .mainBox__itemOuter
-                      a.mainBox__item(href="#")
-                        .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                          img.kv-img(src="assets/img/w285h285.png", alt="")
-                        span Описание первого блока в несколько строчек
-                    .mainBox__itemOuter
-                      a.mainBox__item(href="#")
-                        .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                          img.kv-img(src="assets/img/w285h285.png", alt="")
-                        span Описание первого блока в несколько строчек
-                    .mainBox__itemOuter
-                      a.mainBox__item(href="#")
-                        .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                          img.kv-img(src="assets/img/w285h285.png", alt="")
-                        span Описание первого блока в несколько строчек
+      .serv__outer.w1
+        .serv__wrapper
+          +leftMenuSuperTree
+          .servBox__outer
+            .procedure__area.w0
+              .procedure__outer.w1
+                .title1
+                  h1 Лазерная эпиляция
+                .procedure
+                  +procedure3__intro
+                  
+                  .procedure__masters
+                    .title1
+                      h2 Наши специалисты
+                    .procedure__masterscontent
+                      .procedure__masterOuter
+                        a.procedure__master(href="") Лукьянова Наталья
+                      .procedure__masterOuter
+                        a.procedure__master(href="") Лукьянова Наталья
+                      .procedure__masterOuter
+                        a.procedure__master(href="") Лукьянова Наталья
+                      .procedure__masterOuter
+                        a.procedure__master(href="") Лукьянова Наталья
+                      .procedure__masterOuter
+                        a.procedure__master(href="") Лукьянова Наталья
+                  .procedure__longContent
+                    .title1
+                      h2 Описание
+                    .content
+                      +tempContent
+                  .procedure__video
+                    +videogallery
+                  .procedure__photo
+                    .title1
+                      h3 Фото
+                    +gallery
+                  .price__area#priceAnchor
+                    .title1
+                      h2 Цены
+                    .priceBox__area
+                      .priceBox__title 
+                        h3 Лазерная эпиляция лица и шеи
+                      .priceBox
+                        table
+                          tr
+                            td Лоб
+                            td 2500 руб.
+                          tr
+                            td Шея (задняя поверхность)
+                            td 3400 руб.
+                          tr
+                            td Шея (передняя поверхность)
+                            td 3400 руб.
+                          tr
+                            td Лицо
+                            td 5800 руб.
+                          tr
+                            td Крылья носа
+                            td 2000 руб.
+                    .priceBox__area
+                      .priceBox__title 
+                        h3 Лазерная эпиляция лица и шеи
+                      .priceBox
+                        table
+                          tr
+                            td Лоб
+                            td 2500 руб.
+                          tr
+                            td Шея (задняя поверхность)
+                            td 3400 руб.
+                          tr
+                            td Шея (передняя поверхность)
+                            td 3400 руб.
+                          tr
+                            td Лицо
+                            td 5800 руб.
+                          tr
+                            td Крылья носа!
+                            td 2000 руб.
+                    .outerLink__area
+                      span Все для домашнего ухода Вы можете приобрести в нашем Бьюти-бутике.
+                      a.outerLink(href="#", target="_blank", rel="nofollow") Открыть
+                  .popular__area
+                    .title1
+                      h2 Популярные процедуры
+                    .popular.mainBox.clearfix
+                      .mainBox__itemOuter
+                        a.mainBox__item(href="#")
+                          .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
+                            img.kv-img(src="assets/img/w285h285.png", alt="")
+                          span Описание первого блока в несколько строчек
+                      .mainBox__itemOuter
+                        a.mainBox__item(href="#")
+                          .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
+                            img.kv-img(src="assets/img/w285h285.png", alt="")
+                          span Описание первого блока в несколько строчек
+                      .mainBox__itemOuter
+                        a.mainBox__item(href="#")
+                          .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
+                            img.kv-img(src="assets/img/w285h285.png", alt="")
+                          span Описание первого блока в несколько строчек
+                      .mainBox__itemOuter
+                        a.mainBox__item(href="#")
+                          .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
+                            img.kv-img(src="assets/img/w285h285.png", alt="")
+                          span Описание первого блока в несколько строчек
     +zBlock1
 
   .site__footer
