--- a/src/assets/css/__breadcrumbs.css
+++ b/src/assets/css/__breadcrumbs.css
@@ -42,3 +42,50 @@
   display: block;
   position: relative;
 }
+
+/*****************************************/
+
+.breadcrumbs3__area {
+  padding: 40px 0 30px;
+}
+.breadcrumbs3 {
+  display: block;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  color: #4F4F4F;
+  font-size: 0.75rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+.breadcrumbs3 div:first-child {
+  margin: 0 5px 0 0;
+}
+.breadcrumbs3 div {
+  margin: 0 5px;
+}
+.breadcrumbs3 div a {
+  color: #4F4F4F;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1.2;
+  text-decoration: none;
+  display: flex;
+  position: relative;
+}
+.breadcrumbs3 div a:hover {
+  color: var(--brick);
+  text-decoration: underline;
+}
+
+.breadcrumbs3 div span {
+  color: #828282;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1.2;
+  text-decoration: none;
+  display: block;
+  position: relative;
+}
