--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,7 +7,8 @@ body {
   line-height: 1.2;
   position: relative;
   height: 100%;
-  background: #f3f2f2;
+  /* background: #f3f2f2; */
+  background: #E5E5E5;
   /* background: var(--bg0); */
 }
 
@@ -17,7 +18,7 @@ body {
 
 .site__center {
   position: relative;
-  padding: 10px 0 20px;
+  padding: 0 0 20px;
 }
 
 .site__footer {
