--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -77,6 +77,8 @@
 @import "__forms_media.css";
 
 @import "__breadcrumbs.css";
+@import "__breadcrumbs-media.css";
+
 @import "__wideblock.css";
 
 @import "__instagram.css";
