--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -12,6 +12,12 @@
 }
 
 @media only screen and (max-width: 920px) {
+  h1 {
+    margin: 0 0 20px 0;
+  }
+  h1,h2,h3,h4,h5,h6 {
+    line-height: 1.2;
+  }
 }
 
 @media only screen and (max-width: 800px) {
