--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,14 +1,14 @@
 html,
 body {
   color: #000;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.2;
   position: relative;
   height: 100%;
   /* background: #f3f2f2; */
-  background: #E5E5E5;
+  background: #fafafa;
   /* background: var(--bg0); */
 }
 
