--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -3,6 +3,11 @@
     padding-right: 10px;
     padding-left: 10px;
   }
+  .content blockquote {
+    margin: 50px auto;
+    width: 90%;
+    padding: 30px 50px;
+  }
 }
 
 @media only screen and (max-width: 1140px) {
@@ -15,7 +20,12 @@
   h1 {
     margin: 0 0 20px 0;
   }
-  h1,h2,h3,h4,h5,h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     line-height: 1.2;
   }
 }
@@ -24,10 +34,17 @@
 }
 
 @media only screen and (max-width: 768px) {
-  /* html,
+  html,
   body {
-    font-size: 14px;
-  } */
+    font-size: 15px;
+  }
+  .content p,
+  .content ul,
+  .content ol,
+  .content table {
+    line-height: 1.3rem;
+    margin: 0 0 10px 0;
+  }
   .toTop {
     position: fixed;
     left: auto;
@@ -40,9 +57,17 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .content blockquote {
+    margin: 30px auto;
+    padding: 20px 40px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
+  html,
+  body {
+    font-size: 14px;
+  }
   .content img {
     width: 100%;
     float: none !important;
@@ -60,16 +85,16 @@
 
 @media only screen and (max-width: 414px) {
   h1 {
-    font-size: 1.5rem;
-    text-transform: capitalize;
+    font-size: 1.875rem;
+    margin: 0 0 10px 0;
   }
 
   h2 {
-    font-size: 1.375rem;
+    font-size: 1.625rem;
   }
 
   h3 {
-    font-size: 1.25rem;
+    font-size: 1.375rem;
   }
 
   h4 {
@@ -81,10 +106,14 @@
   }
 
   h6 {
-    font-size: 0.875rem;
+    font-size: 1rem;
   }
   .content__outer {
     padding: 10px 0;
+  }
+  .content blockquote {
+    margin: 20px auto;
+    padding: 20px 20px;
   }
 }
 
