--- a/src/assets/css/typorraphy.css
+++ b/src/assets/css/typorraphy.css
@@ -9,7 +9,6 @@ h6 {
   line-height: 1.4;
 }
 
-h2,
 h3,
 h4,
 h5,
@@ -24,10 +23,12 @@ h1 {
 
 h2 {
   font-size: 2rem;
+  margin: 25px 0 10px 0;
 }
 
 h3 {
   font-size: 1.75rem;
+  color: #828282;
 }
 
 h4 {
@@ -69,20 +70,18 @@ h6 {
 .content p:last-child,
 .content ul:last-child,
 .content ol:last-child,
-.content blockquote:last-child,
 .content table:last-child {
   margin-bottom: 0;
 }
 
 .content ul {
-  padding: 0 0 15px 15px;
+  /* padding: 0 0 15px 0; */
 }
 
 .content ol {
   padding: 0 0 15px 25px;
 }
 
-.content ul li,
 .content ol li {
   /* margin: 0 0 5px 0; */
   margin: 0;
@@ -90,22 +89,37 @@ h6 {
 }
 
 .content ul li {
-  /* list-style-image: url("../img/ulbg.png"); */
+  padding: 0 0 0 35px;
+  position: relative;
+  font-size: 1rem;
+  line-height: 1.4;
+  list-style: none;
+  margin: 0 0 20px 0;
+}
+.content ul li:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -7px;
+  width: 14px;
+  height: 14px;
+  border: 1px solid #828282;
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+
+.content blockquote h2,
+.content blockquote h3,
+.content blockquote h4 {
+  margin-top: 0;
 }
 
 .content blockquote {
-  color: #fff;
-  padding: 10px 20px;
-  /* background: var(--x1greySuperLight); */
-  background: var(--link1);
-  line-height: 1.5;
-  font-style: italic;
-}
-
-.content blockquote p {
-  color: #fff;
-  line-height: 1.5;
-  font-style: italic;
+  margin: 60px 0;
+  background: #fff;
+  box-shadow: 0px 12px 25px rgba(0, 0, 0, 0.08);
+  padding: 40px 60px;
 }
 
 .content a {
