--- a/src/procedure3.pug
+++ b/src/procedure3.pug
@@ -31,116 +31,183 @@ body
 
   .site__center
     +breadcrumbs3
-    .procedure3__introArea 
-      +procedure3__intro
+    .procedure3__introArea
+      .procedure3__introOuter
+        .title3 
+          h1 Лазерная эпиляция Candela
+        +procedure3__intro
     +wideBlock
-    .serv__area.w0
-      .serv__outer.w1
-        .serv__wrapper
-          +leftMenuSuperTree
-          .servBox__outer
-            .procedure__area.w0
-              .procedure__outer.w1
-                .title1
-                  h1 Лазерная эпиляция
-                .procedure
-                  +procedure3__intro
-                  
-                  .procedure__masters
-                    .title1
-                      h2 Наши специалисты
-                    .procedure__masterscontent
-                      .procedure__masterOuter
-                        a.procedure__master(href="") Лукьянова Наталья
-                      .procedure__masterOuter
-                        a.procedure__master(href="") Лукьянова Наталья
-                      .procedure__masterOuter
-                        a.procedure__master(href="") Лукьянова Наталья
-                      .procedure__masterOuter
-                        a.procedure__master(href="") Лукьянова Наталья
-                      .procedure__masterOuter
-                        a.procedure__master(href="") Лукьянова Наталья
-                  .procedure__longContent
-                    .title1
-                      h2 Описание
-                    .content
-                      +tempContent
-                  .procedure__video
-                    +videogallery
-                  .procedure__photo
-                    .title1
-                      h3 Фото
-                    +gallery
-                  .price__area#priceAnchor
-                    .title1
-                      h2 Цены
-                    .priceBox__area
-                      .priceBox__title 
-                        h3 Лазерная эпиляция лица и шеи
-                      .priceBox
-                        table
-                          tr
-                            td Лоб
-                            td 2500 руб.
-                          tr
-                            td Шея (задняя поверхность)
-                            td 3400 руб.
-                          tr
-                            td Шея (передняя поверхность)
-                            td 3400 руб.
-                          tr
-                            td Лицо
-                            td 5800 руб.
-                          tr
-                            td Крылья носа
-                            td 2000 руб.
-                    .priceBox__area
-                      .priceBox__title 
-                        h3 Лазерная эпиляция лица и шеи
-                      .priceBox
-                        table
-                          tr
-                            td Лоб
-                            td 2500 руб.
-                          tr
-                            td Шея (задняя поверхность)
-                            td 3400 руб.
-                          tr
-                            td Шея (передняя поверхность)
-                            td 3400 руб.
-                          tr
-                            td Лицо
-                            td 5800 руб.
-                          tr
-                            td Крылья носа!
-                            td 2000 руб.
-                    .outerLink__area
-                      span Все для домашнего ухода Вы можете приобрести в нашем Бьюти-бутике.
-                      a.outerLink(href="#", target="_blank", rel="nofollow") Открыть
-                  .popular__area
-                    .title1
-                      h2 Популярные процедуры
-                    .popular.mainBox.clearfix
-                      .mainBox__itemOuter
-                        a.mainBox__item(href="#")
-                          .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                            img.kv-img(src="assets/img/w285h285.png", alt="")
-                          span Описание первого блока в несколько строчек
-                      .mainBox__itemOuter
-                        a.mainBox__item(href="#")
-                          .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                            img.kv-img(src="assets/img/w285h285.png", alt="")
-                          span Описание первого блока в несколько строчек
-                      .mainBox__itemOuter
-                        a.mainBox__item(href="#")
-                          .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                            img.kv-img(src="assets/img/w285h285.png", alt="")
-                          span Описание первого блока в несколько строчек
-                      .mainBox__itemOuter
-                        a.mainBox__item(href="#")
-                          .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
-                            img.kv-img(src="assets/img/w285h285.png", alt="")
-                          span Описание первого блока в несколько строчек
+
+    .wideBox3__area 
+      .wideBox3
+        .content 
+          h2 Результат лечения
+          p
+            strong Чтобы добиться наилучшего эффекта, нужно провести несколько сеансов лазерной эпиляции волос аппаратом Candela GentleLasePro-U.
+          p Точное количество будет зависеть от общего гормонального фона, состояния эндокринной системы организма и зоны обработки. Поэтому мужчинам, скорее всего, понадобится больше процедур, чем женщинам. Результат же не разочарует — тонкие волосы исчезнут без следа, а жесткие станут практически незаметны.
+        +imgSlider-2pic
+        
+        .content 
+          blockquote
+            h2 О технологии
+            p
+              strong Эта методика эксклюзивна тем, что подходит для любых зон лица и тела.
+            p Суть работы данного лазера такова. Лазерная энергия, излучаемая аппаратом и проходящая по всей длине волоса, трансформируется в тепловую. Она разрушает волосяной фолликул, но при этом кожа вокруг не повреждается. Волосяная же луковица сгорает, следовательно, прекращается и рост волос.
+
+          h2 Как проходит процедура
+          p <strong>Эпиляция александритовым лазером Candela GentleLasePro-U</strong> проходит в 3 этапа. От правильности подготовки, манипуляций врача и последующего ухода в период восстановления, зависит окончательный результат.
+          
+          h3 1. Подготовка
+          p Клиенту необходимо исключить посещение солярия и принятие солнечных ванн, употребление алкогольных напитков и некоторых лекарственных препаратов.
+          strong Нежелательные волосы необходимо устранить при помощи станка или депиляционного крема за 24 часа до процедуры.
+          h3 2. Ход процедуры
+          p Клиенту необходимо исключить посещение солярия и принятие солнечных ванн, употребление алкогольных напитков и некоторых лекарственных препаратов.
+          strong Нежелательные волосы необходимо устранить при помощи станка или депиляционного крема за 24 часа до процедуры.
+          h3 3. Завершающий уход
+          p Клиенту необходимо исключить посещение солярия и принятие солнечных ванн, употребление алкогольных напитков и некоторых лекарственных препаратов.
+          
+          .videoPhotoBox
+            .videoPhotoBox__video
+              .videoPhotoBox__videoItem.videoBox_i
+                iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+            .videoPhotoBox__photo
+              .videoPhotoBox__photoItemOuter
+                .videoPhotoBox__photoItem
+                  a(href="assets/img/before-after/05.jpg" data-fancybox="group2" data-caption="002" style="background-image: url(assets/img/before-after/05.jpg)")
+              .videoPhotoBox__photoItemOuter
+                .videoPhotoBox__photoItem
+                  a(href="assets/img/before-after/04.jpg" data-fancybox="group2" data-caption="002" style="background-image: url(assets/img/before-after/04.jpg)")
+          .videoPhotoBox
+            .videoPhotoBox__video
+              .videoPhotoBox__videoItem.videoBox_i
+                iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+            .videoPhotoBox__photo
+              .videoPhotoBox__photoItemOuter
+                .videoPhotoBox__photoItem
+                  a(href="assets/img/before-after/05.jpg" data-fancybox="group2" data-caption="002" style="background-image: url(assets/img/before-after/05.jpg)")
+              .videoPhotoBox__photoItemOuter
+                .videoPhotoBox__photoItem
+                  a(href="assets/img/before-after/04.jpg" data-fancybox="group2" data-caption="002" style="background-image: url(assets/img/before-after/04.jpg)")
+
+
+
+
+
+        .content
+          h2 Показания / противопоказания
+          h3 Показания к применению
+          p
+            strong Применение александритового лазера незаменимо в следующих случаях:
+          ul
+            li гиперчувствительность кожного покрова и другие противопоказания, не позволяющие проводить депиляцию, шугаринг и пользоваться бритвенным станком
+            li вросшие волосы
+            li темный окрас волос в сочетании со светлой кожей
+            li повышенный рост волос из-за гормонального сбоя
+            li необходимость удаления не только волос, но и устранения пигментации
+          h3 Прпотивопоказания
+          ul
+            li гиперчувствительность кожного покрова и другие противопоказания, не позволяющие проводить депиляцию, шугаринг и пользоваться бритвенным станком
+            li вросшие волосы
+            li темный окрас волос в сочетании со светлой кожей
+            li повышенный рост волос из-за гормонального сбоя
+            li необходимость удаления не только волос, но и устранения пигментации
+          blockquote
+            h2 наши преимущества
+            p
+              strong В настоящее время существует большой выбор аппаратов для удаления волос лазером, различающихся способом производства импульсов.
+            p В нашем салоне доступен александритовый лазер Candela GentleLasePro-U – самый современный и эффективный из них.
+            p Врачи-косметологи нашего центра, работающие по телу, обладают огромным опытом проведения процедуры и индивидуально подбирают мощность воздействия лазера для максимально быстрого и безопасного результата.
+        
+        .procedure__masters
+          .title1
+            h2 Наши специалисты
+          .procedure__masterscontent
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
+            .procedure__masterOuter
+              a.procedure__master(href="") Лукьянова Наталья
+        .procedure__video
+          +videogallery
+        .procedure__photo
+          .title1
+            h3 Фото
+          +gallery
+        .price__area#priceAnchor
+          .title1
+            h2 Цены
+          .priceBox__area
+            .priceBox__title 
+              h3 Лазерная эпиляция лица и шеи
+            .priceBox
+              table
+                tr
+                  td Лоб
+                  td 2500 руб.
+                tr
+                  td Шея (задняя поверхность)
+                  td 3400 руб.
+                tr
+                  td Шея (передняя поверхность)
+                  td 3400 руб.
+                tr
+                  td Лицо
+                  td 5800 руб.
+                tr
+                  td Крылья носа
+                  td 2000 руб.
+          .priceBox__area
+            .priceBox__title 
+              h3 Лазерная эпиляция лица и шеи
+            .priceBox
+              table
+                tr
+                  td Лоб
+                  td 2500 руб.
+                tr
+                  td Шея (задняя поверхность)
+                  td 3400 руб.
+                tr
+                  td Шея (передняя поверхность)
+                  td 3400 руб.
+                tr
+                  td Лицо
+                  td 5800 руб.
+                tr
+                  td Крылья носа!
+                  td 2000 руб.
+          .outerLink__area
+            span Все для домашнего ухода Вы можете приобрести в нашем Бьюти-бутике.
+            a.outerLink(href="#", target="_blank", rel="nofollow") Открыть
+        .popular__area
+          .title1
+            h2 Популярные процедуры
+          .popular.mainBox.clearfix
+            .mainBox__itemOuter
+              a.mainBox__item(href="#")
+                .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
+                  img.kv-img(src="assets/img/w285h285.png", alt="")
+                span Описание первого блока в несколько строчек
+            .mainBox__itemOuter
+              a.mainBox__item(href="#")
+                .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
+                  img.kv-img(src="assets/img/w285h285.png", alt="")
+                span Описание первого блока в несколько строчек
+            .mainBox__itemOuter
+              a.mainBox__item(href="#")
+                .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
+                  img.kv-img(src="assets/img/w285h285.png", alt="")
+                span Описание первого блока в несколько строчек
+            .mainBox__itemOuter
+              a.mainBox__item(href="#")
+                .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
+                  img.kv-img(src="assets/img/w285h285.png", alt="")
+                span Описание первого блока в несколько строчек
     +zBlock1
 
   .site__footer
