--- a/src/assets/css/xandercode.css
+++ b/src/assets/css/xandercode.css
@@ -17,7 +17,7 @@
 
   /* --color1: #ff8000; */
   --color1: #c24b35;
-  
+
   --color2: #f5c98c;
 
   --colorFFF: #fff;
@@ -38,8 +38,8 @@
   --title1bg: #e6e6e6;
 
   --brown1: #514240;
-  --brick: #9F3125;
-  
+  --brick: #9f3125;
+  --dark: #4f4f4f;
 }
 
 .stop {
