--- a/src/procedure3.pug
+++ b/src/procedure3.pug
@@ -118,33 +118,33 @@ body
             p В нашем салоне доступен александритовый лазер Candela GentleLasePro-U – самый современный и эффективный из них.
             p Врачи-косметологи нашего центра, работающие по телу, обладают огромным опытом проведения процедуры и индивидуально подбирают мощность воздействия лазера для максимально быстрого и безопасного результата.
         
-        .procedure__masters
-          .title1
+        .procedure3__masters
+          .title3
             h2 Наши специалисты
-          .procedure__masterscontent
-            .procedure__masterOuter
-              a.procedure__master(href="") Лукьянова Наталья
-            .procedure__masterOuter
-              a.procedure__master(href="") Лукьянова Наталья
-            .procedure__masterOuter
-              a.procedure__master(href="") Лукьянова Наталья
-            .procedure__masterOuter
-              a.procedure__master(href="") Лукьянова Наталья
-            .procedure__masterOuter
-              a.procedure__master(href="") Лукьянова Наталья
-        .procedure__video
-          +videogallery
-        .procedure__photo
-          .title1
-            h3 Фото
-          +gallery
-        .price__area#priceAnchor
-          .title1
+          .procedure3__masterscontent
+            .procedure3__masterOuter
+              a.procedure3__master(href="") Лукьянова Наталья
+            .procedure3__masterOuter
+              a.procedure3__master(href="") Лукьянова Наталья
+            .procedure3__masterOuter
+              a.procedure3__master(href="") Лукьянова Наталья
+            .procedure3__masterOuter
+              a.procedure3__master(href="") Лукьянова Наталья
+            .procedure3__masterOuter
+              a.procedure3__master(href="") Лукьянова Наталья
+        //- .procedure__video
+        //-   +videogallery
+        //- .procedure__photo
+        //-   .title1
+        //-     h3 Фото
+        //-   +gallery
+        .price3__area#priceAnchor
+          .title3
             h2 Цены
-          .priceBox__area
-            .priceBox__title 
+          .priceBox3__area
+            .priceBox3__title 
               h3 Лазерная эпиляция лица и шеи
-            .priceBox
+            .priceBox3
               table
                 tr
                   td Лоб
@@ -161,10 +161,10 @@ body
                 tr
                   td Крылья носа
                   td 2000 руб.
-          .priceBox__area
-            .priceBox__title 
+          .priceBox3__area
+            .priceBox3__title 
               h3 Лазерная эпиляция лица и шеи
-            .priceBox
+            .priceBox3
               table
                 tr
                   td Лоб
@@ -181,9 +181,10 @@ body
                 tr
                   td Крылья носа!
                   td 2000 руб.
-          .outerLink__area
-            span Все для домашнего ухода Вы можете приобрести в нашем Бьюти-бутике.
-            a.outerLink(href="#", target="_blank", rel="nofollow") Открыть
+          .outerLink3__area
+            a.outerLink3(href="#", target="_blank", rel="nofollow") Купить
+            span Все для домашнего ухода Вы можете приобрести в нашем <strong>Бьюти-бутике.</strong>
+            
         .popular__area
           .title1
             h2 Популярные процедуры
@@ -208,7 +209,7 @@ body
                 .mainBox__itemImg(style="background-image: url(assets/img/serv/0001.jpg);")
                   img.kv-img(src="assets/img/w285h285.png", alt="")
                 span Описание первого блока в несколько строчек
-    +zBlock1
+    +zBlock3
 
   .site__footer
     +footer
