--- a/src/assets/css/__procedure3.css
+++ b/src/assets/css/__procedure3.css
@@ -233,6 +233,7 @@
   max-width: 1200px;
   margin: 0 auto 30px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .videoPhotoBox__video {
@@ -284,4 +285,125 @@
 .videoPhotoBox:nth-child(odd) .videoPhotoBox__photo {
   order: 0;
   padding: 0 20px 0 0;
+}
+
+/*************************************************/
+
+.procedure3__masters {
+  margin: 20px 0 0 0;
+}
+
+.procedure3__masterscontent {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -5px;
+}
+
+.procedure3__masterOuter {
+  padding: 5px;
+}
+
+.procedure3__master {
+  display: flex;
+  padding: 0.625rem 1.875rem;
+  text-decoration: none;
+  width: 100%;
+  font-size: 1rem;
+  line-height: 1.3;
+  color: var(--dark);
+  border: 1px solid #e0e0e0;
+  transition: all 0.3s;
+  border-radius: 25px;
+}
+.procedure3__master:hover {
+  background: var(--brick);
+  border: 1px solid var(--brick);
+  color: #fff;
+}
+
+/************************************************/
+
+.price3__area {
+  margin: 60px 0;
+  background: #fff;
+  box-shadow: 0px 12px 25px rgb(0 0 0 / 8%);
+  padding: 40px 10%;
+}
+
+.priceBox3__area {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0 0 0;
+}
+.priceBox3__title {
+  padding: 0 0 10px 0;
+}
+.priceBox3__title h3 {
+  margin: 0;
+  line-height: 1.4;
+}
+
+.priceBox3 {
+  position: relative;
+  min-width: 60%;
+  /* max-width: 1000px; */
+}
+
+.priceBox3 table {
+  table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  border: none;
+}
+
+.priceBox3 table tr {
+  border-bottom: 1.5px dashed #bdbdbd;
+}
+
+.priceBox3 table td {
+  padding: 10px;
+  /* background: var(--x1greySuperLight); */
+  font-size: 1rem;
+  color: var(--dark);
+}
+
+.priceBox3 table td:nth-child(1) {
+  width: 75%;
+}
+
+.priceBox3 table td:nth-child(2) {
+  width: 25%;
+  text-align: right;
+}
+
+.outerLink3__area {
+  width: 100%;
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+}
+
+.outerLink3__area span {
+  font-size: 1rem;
+  color: var(--dark);
+}
+.outerLink3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: #fff;
+  background: var(--brick);
+  padding: 0.75rem 2rem;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: all 0.3s;
+  margin-right: 30px;
+}
+.outerLink3:hover {
+  background: var(--link1hov);
 }
