--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -81,6 +81,9 @@
     position: relative;
     padding: 5px 0 15px;
   }
+  .content ul li {
+    margin: 0 0 0.75rem 0;
+  }
 }
 
 @media only screen and (max-width: 414px) {
