--- a/src/assets/css/typorraphy.css
+++ b/src/assets/css/typorraphy.css
@@ -27,7 +27,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: 1.625rem;
   color: #828282;
 }
 
@@ -41,6 +41,10 @@ h5 {
 
 h6 {
   font-size: 1.125rem;
+}
+
+strong {
+  font-weight: bold;
 }
 
 .content__outer {
@@ -89,12 +93,12 @@ h6 {
 }
 
 .content ul li {
-  padding: 0 0 0 35px;
+  padding: 0 0 0 2.125rem;
   position: relative;
   font-size: 1rem;
   line-height: 1.4;
   list-style: none;
-  margin: 0 0 20px 0;
+  margin: 0 0 1.25rem 0;
 }
 .content ul li:before {
   content: "";
